<resources>
    <string name="app_name">Inventory</string>

<!-- Catalog Activity -->

    <!-- Label for overflow menu option that inserts fake footwear data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="price_sign">$</string>

    <string name="empty_list_view">Footwear List is Empty</string>

<!-- Detail Activity -->
  <!-- App bar -->
    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product[CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="editor_update_product_successful">Update product succesful</string>

    <string name="editor_update_product_failed">Update product failed</string>

    <string name="input_validation_name">Name Field is required.</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit a Product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Category Overview -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_footwear_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_footwear_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="field_quantity">Quantity</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_footwear_quantity">0</string>

  <!-- Category Supplier Info -->
    <string name="supplier_info">Supplier information</string>

    <!-- Text hint for phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Phone</string>

    <!-- Text hint for email field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_email">E-mail</string>

    <!-- Text hint for phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_webpage">Webpage</string>

  <!-- Category product image -->
    <string name="product_image">Product Image</string>

    <string name="add_image">Add Photo</string>

    <string name="denied_access_gallery">Not allowed to access gallery</string>

  <!-- Preview of the layout -->
    <string name="name_preview">Product´s name</string>
    <string name="price_preview">Product´s price</string>
    <string name="quantity_preview">10</string>
    <string name="quantity_info">Available</string>
    <string name="sold_info">Sold</string>
    <string name="sold_preview">5</string>

</resources>
