<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Label -->
    <TextView
        android:text="@string/category_overview"
        style="@style/CategoryStyle" />

    <!-- Input fields -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:paddingLeft="4dp"
        android:orientation="vertical">

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_footwear_name"
            android:hint="@string/hint_footwear_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_footwear_price"
            android:hint="@string/hint_footwear_price"
            android:inputType="number"
            style="@style/EditorFieldStyle" />

        <!-- Quantity field -->
        <TextView
            android:text="@string/field_quantity"
            android:textColor="@color/colorAccent"
            style="@style/EditorFieldStyle"
            android:paddingBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:text="-"
                style="@style/quantity_button"
                android:id="@+id/button_minus"
                android:background="@drawable/round_button_minus"/>

            <!-- Quantity field -->
            <TextView
                android:id="@+id/tv_quantity"
                android:hint="@string/hint_footwear_quantity"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/EditorFieldStyle" />

            <Button
                android:text="+"
                style="@style/quantity_button"
                android:id="@+id/button_plus"
                android:background="@drawable/round_button_minus"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>