<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_info"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Phone field -->
                <EditText
                    android:id="@+id/edit_supplier_phone"
                    android:hint="@string/hint_supplier_phone"
                    android:inputType="phone"
                    style="@style/EditorFieldPhoneStyle" />

                <ImageButton
                    android:id="@+id/ib_call"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_call_black_24dp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_button_minus" />

            </LinearLayout>

            <!-- Email field -->
            <EditText
                android:id="@+id/edit_supplier_email"
                android:hint="@string/hint_supplier_email"
                android:inputType="textEmailAddress"
                style="@style/EditorFieldStyle" />

            <!-- Web page field -->
            <EditText
                android:id="@+id/edit_supplier_web_page"
                android:hint="@string/hint_supplier_webpage"
                android:inputType="textWebEditText"
                style="@style/EditorFieldStyle" />


      </LinearLayout>

    </LinearLayout>